<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:scaleType="centerCrop"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.6"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:layout_gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_layout"
            android:alpha="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_fingerprint_black"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empresaabc"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:text="@string/hola"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="textStart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:text="@string/ingreseNombreUsuario"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textStart"/>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                app:startIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombreUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreUsuario"
                    android:inputType="textEmailAddress"
                    android:textSize="13sp"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:text="@string/inicio"/>

        </LinearLayout>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>