<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/home"
            android:scaleType="centerCrop"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.6"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="680dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_layout"
            android:alpha="0.5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/tipoDeCambioHoy"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textStart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/compra"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart"/>

                <TextView
                    android:id="@+id/tvCompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/venta"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart"/>

                <TextView
                    android:id="@+id/tvVenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/infoClimaticaActual"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textAlignment="textStart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/temperatura"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart"/>

                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="55dp"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/condicion"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart" />

                <ImageView
                    android:id="@+id/ivWeather"
                    android:src="@drawable/ic_cloud_black"
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="20dp"
                    app:tint="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWeatherDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/region"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart"/>

                <TextView
                    android:id="@+id/tvRegion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/amanecer"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart"/>

                <TextView
                    android:id="@+id/tvSunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/anochecer"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textStart"/>

                <TextView
                    android:id="@+id/tvSunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnNotificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:text="@string/notificar"/>

        </LinearLayout>

    </FrameLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>